<resources>
    <string name="app_name">MyChatApp</string>
    <string name="reg_name">Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_pswrd">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Logout</string>
    <string name="account_settings">Account Settings</string>
    <string name="send">SEND</string>
    <string name="login">LOGIN</string>
    <string name="forget">Forget Password ?</string>
    <string name="account_users">All Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
